# docker-django-example

./: .env.test  .gitignore  README.md  compose.yaml  pyproject.toml  run
.github/workflows/: ci.yml
assets/css/: app.css
assets/js/: app.js
src/config/: asgi.py  celery.py  settings.py  tests.py  urls.py  wsgi.py
src/pages/: tasks.py  tests.py  urls.py  views.py
src/pages/templates/pages/: home.html  tasks.html
src/templates/layouts/: index.html
src/up/: tests.py
test-results/: report.xml
