[project]
name = "travelpals"
version = "0.1.0"
description = "TravelPals app on Django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django==5.2.6",
  "celery==5.5.3",
  "django-debug-toolbar==6.0.0",
  "gunicorn==23.0.0",
  "psycopg==3.2.10",
  "redis==6.4.0",
  "ruff==0.13.0",
  "setuptools==80.9.0",
  "whitenoise==6.10.0",
  "pytest==8.4.0",
  "pytest-django==4.10.0",
  "pytest-cov==5.0.0",
  "django-stubs==5.0.2",
  "fakeredis>=2.31.1",
]

dev-dependencies = [
    "pytest-django",
    "pytest-sugar",
    "ruff",
    "django-debug-toolbar",
    "fakeredis",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "SIM"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]
DJANGO_SETTINGS_MODULE = "config.settings"
